--- a/index.html
+++ b/index.html
@@ -57,11 +57,11 @@
       }
 
       var buildUrl = "Build";
-      var loaderUrl = buildUrl + "/Bfyiudfgy.loader.js";
+      var loaderUrl = buildUrl + "/паро.loader.js";
       var config = {
-        dataUrl: buildUrl + "/Bfyiudfgy.data",
-        frameworkUrl: buildUrl + "/Bfyiudfgy.framework.js",
-        codeUrl: buildUrl + "/Bfyiudfgy.wasm",
+        dataUrl: buildUrl + "/паро.data",
+        frameworkUrl: buildUrl + "/паро.framework.js",
+        codeUrl: buildUrl + "/паро.wasm",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DefaultCompany",
         productName: "Hill Climb Racing",
